--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Lobster');
-
 body {
     font-family: sans-serif;
     background-color: #aed0a5;
@@ -23,4 +21,11 @@ body {
     font-weight: 600;
     font-style: normal;
     font-display: swap;
+}
+
+#messageMobile {
+    font-family: 'JetBrains Mono', serif;
+    font-size: 25px;
+    text-align: center;
+    vertical-align: middle;
 }
