--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: sans-serif;
     background-color: #aed0a5;
+    overflow: hidden;
 }
 
 #gameScreen {
@@ -23,9 +24,18 @@ body {
     font-display: swap;
 }
 
-#messageMobile {
+#descriptionTop {
     font-family: 'JetBrains Mono', serif;
     font-size: 25px;
+    top: 25px;
     text-align: center;
-    vertical-align: middle;
+}
+
+#descriptionBottom {
+    font-family: 'JetBrains Mono', serif;
+    font-size: 25px;
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    width: 100%;
 }
